tests/compile_fail/invalid_grid_line_zero.rs
use surgeist_style::GridLine;

fn main() {
    let _line = GridLine::Line(0);
}
