tests/compile_fail/invalid_grid_line_zero.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/invalid_grid_line_zero.rs:4:32
  |
4 |     let _line = GridLine::Line(0);
  |                 -------------- ^ expected `GridLineIndex`, found integer
  |                 |
  |                 arguments to this enum variant are incorrect
  |
note: tuple variant defined here
 --> src/value.rs
  |
  |     Line(GridLineIndex),
  |     ^^^^
